--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="es">
     <meta charset="UTF-8">
-    <title>Ejemplo de una pagina web de nivel medio-basico</title>
+    <title>BLOG WEB</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="https://s2.coinmarketcap.com/static/img/coins/200x200/5994.png">
 </head>
 <body>
     <div class="cabecera">
-        <a href="/"><img src=""/></a>
+        
+        <marquee behavior="scroll" direction="left" height="60" scrollamount="5">
+            <entrada>
+                ¡VIEN VENIDO!
+            </entrada>
+        </marquee>
     </div>
     <div class="cuerpo">
         <div class="contenido">
             <h1>Artículos </h1>
-            <h2>Programacion de un samd21G18    con atmel-ic</h2>
-            <p>Existen <a style="color:rgb(90, 93, 180)"target="_blank" href="http://www.quackit.com/html/online-html-editor/">muchas herramientas</a>, incluso gratuitas, que te permiten crear paginas web sin saber realmente HTML.</p>
-            <p>Esto es una manera muy rápida de crear paginas web porque te "oculta" el código y trabajas de una manera similar a como ya estas acostumbrado a hacerlo en los editores de texto. Y realmente está muy bien para hacer, por ejemplo, una primera versión de una página web o partes de ella.</p>
-            <p>Pero no caigas en la tentación de dejar de aprender HTML a fondo por ello. Esto seria pan para hoy y hambre para mañana porque así siempre tendrás un techo muy bajo, cosas un poco más avanzadas no se pueden hacer así y, por tanto, siempre tendrás un techo muy bajo.</p>
-            <h2>2. Piensa una buena estructura común</h2>
-            <p>Antes de crear una pagina web, procura pensar una estructura lógica común compuesta por etiquetas de divisiones.</p>
-            <p>Un ejemplo puede ser, por ejemplo, una estructura basica de cabecera / cuerpo /pie.</p>
-            <p>Cuando quieres aplicar diseño con CSS a la página resultara mucho más fácil y verás cómo una estructura bien pensada te dará mucho más juego paara crear un buen diseño.</p>
-            <h2>3. Diseña "responsive" desde el principio</h2>
+            <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">1. Porque usar HTML?</a></h2>
+            <p>Breve apartado del blog en el que se comenta porque usar HTML y las ventajas que posee.</p>
+            <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">2. Criptomonedas, ¿Futuro o pasado?</a></h2>
+            <p>¿Merece la pena entrar en el mundo Cripto?, en este apartado se haran unos breves comentarios sobre la evolucion que han tenido las Criptomonedas</p>
+            <p>Tambien se muestra el estado actual del precio que tienen</p>
+            <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">3. Diseña "responsive" desde el principio</a></h2>
             <p>El % de visitas que se hacen desde dispositivos móviles es cada vez mayor. En muchas webs ya ronda el 25-30% con tendencia al alza. Esto lo deberias tener muy en cuenta.</p>
             <p>Por suerte, hacer diseños "responsive" (adaptables a diferentes tipos de pantalla) basicos no es muy difícil. Esta misma página que es muy simple</p>
             <p>Para ello lo unico que tienes que hacer es estructurar bien la páginas y usar dimensiones relativas (%) en las divisiones. Esto ya te permitirá hacer páginas con un diseño responsive básico.</p>
@@ -29,7 +32,7 @@
         <div class="barra-lateral">
             <a><img
                     width="50%"
-                    src="anonimo.jpg"></a>
+                    src="programador.jpg"></a>
             <div>
                 <h3>5dr3v</h3>
                 <p class="bio" itemprop="descripcion">
