--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <marquee behavior="scroll" direction="left" height="60" scrollamount="5">
             <entrada>
-                ¡VIEN VENIDO!
+                ¡BIEN VENIDO!
             </entrada>
         </marquee>
     </div>
@@ -49,6 +49,12 @@
                         <a href="https://github.com/sdrev" itemprop="sameAs" rel="nofollow noopener noreferrer">
                         <i class="fa fa-github-square " ></i>
                         Github</a>
+                    </li>
+                    <li>
+                        <a href="mailto:carlos.visdomine145@comunidadunir.net?Subject=Felicitar%20por%20el%20buen%20trabajo">
+                        <i class="fa fa-envelope" ></i>
+                        correo</a>
+                        </a>
                     </li>
                 </ul>
             </div>
