--- a/pagina3.html
+++ b/pagina3.html
@@ -18,31 +18,31 @@
         <div class="contenido">
             <h1>Artículos </h1>
             <ol>
-                <h2><a style="color: #6e8fad" href="1. Porque usar HTML.html">1. Porque usar HTML?</a></h2>
+                <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">1. Porque usar HTML?</a></h2>
                 <p>Breve apartado del blog en el que se comenta porque usar HTML y las ventajas que posee.</p>
-                <h2><a style="color: #6e8fad" href="http://www.quackit.com/html/online-html-editor/">2. Criptomonedas, ¿Futuro o pasado?</a></h2>
+                <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">2. Criptomonedas, ¿Futuro o pasado?</a></h2>
                 <p>¿Merece la pena entrar en el mundo Cripto?, en este apartado se haran unos breves comentarios sobre la evolucion que han tenido las Criptomonedas</p>
                 <p>Tambien se muestra el estado actual del precio que tienen</p>
-                <h2><a style="color: #6e8fad" href="http://www.quackit.com/html/online-html-editor/">3. Diseña "responsive" desde el principio</a></h2>
+                <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">3. Diseña "responsive" desde el principio</a></h2>
                 <p>El % de visitas que se hacen desde dispositivos móviles es cada vez mayor. En muchas webs ya ronda el 25-30% con tendencia al alza. Esto lo deberias tener muy en cuenta.</p>
                 <p>Por suerte, hacer diseños "responsive" (adaptables a diferentes tipos de pantalla) basicos no es muy difícil. Esta misma página que es muy simple</p>
                 <p>Para ello lo unico que tienes que hacer es estructurar bien la páginas y usar dimensiones relativas (%) en las divisiones. Esto ya te permitirá hacer páginas con un diseño responsive básico.</p>
                 <p>Y si quieres saber cómo hacer páginas responsive avanzadas como esas que ocultan o trasladan a otra parte ciertas divisiones segmlñ´ñl´ñl´ñlñ´lñ´lñ´lñlñ´lñ´lñ´lñ´lñun el tamaño, entonces écha un vistazo a <a target="_blank" href="https://rolandocaldas.com/html5/media-queries-y-responsive-design">este enlace</a>.</p>
-                <h2><a style="color: #6e8fad" href="http://www.quackit.com/html/online-html-editor/">4. Criptomonedas, ¿Futuro o pasado?</a></h2>
+                <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">4. Criptomonedas, ¿Futuro o pasado?</a></h2>
                 <p>¿Merece la pena entrar en el mundo Cripto?, en este apartado se haran unos breves comentarios sobre la evolucion que han tenido las Criptomonedas</p>
                 <p>Tambien se muestra el estado actual del precio que tienen</p>
-                <h2><a style="color: #6e8fad" href="http://www.quackit.com/html/online-html-editor/">5. Criptomonedas, ¿Futuro o pasado?</a></h2>
+                <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">5. Criptomonedas, ¿Futuro o pasado?</a></h2>
                 <p>¿Merece la pena entrar en el mundo Cripto?, en este apartado se haran unos breves comentarios sobre la evolucion que han tenido las Criptomonedas</p>
                 <p>Tambien se muestra el estado actual del precio que tienen</p>
-                <h2><a style="color: #6e8fad" href="http://www.quackit.com/html/online-html-editor/">6. Criptomonedas, ¿Futuro o pasado?</a></h2>
+                <h2><a style="color: #6e8fad"target="_blank" href="http://www.quackit.com/html/online-html-editor/">6. Criptomonedas, ¿Futuro o pasado?</a></h2>
                 <p>¿Merece la pena entrar en el mundo Cripto?, en este apartado se haran unos breves comentarios sobre la evolucion que han tenido las Criptomonedas</p>
                 <p>Tambien se muestra el estado actual del precio que tienen</p>
             </ol>
             <section class="paginacion">
                 <ul>
-                    <li><a href="index.html" class="active">1</a></li>
+                    <li><a href="index.html">1</a></li>
                     <li><a href="pagina2.html">2</a></li>
-                    <li><a href="pagina3.html">3</a></li>
+                    <li><a href="pagina3.html" class="active">3</a></li>
                     <li><a href="pagina4.html">4</a></li>
                 </ul>
             </section>
@@ -82,5 +82,4 @@
         <p>Copyright © 2021 proyecto 5r3v</p>
     </footer>
 </body>
-
 </html>
