--- a/1. HTML.html
+++ b/1. HTML.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cuerpo">
         <div class="articulo">
-            <p><h1><a><img align="center" width="20%" src="https://acortar.link/AN2USF"> 1. Porque usar HTML?</h1></a></p>
+            <p><h1><a><img align="center" width="20%" src="imagenes\html.png"> 1. Porque usar HTML?</h1></a></p>
                 <ol>
                 <h2><a>¿Que es HTML?</a></h2>
                 <p><b>HTML</b> son las siglas de <b>H</b>yper<b>t</b>ext <b>M</b>arkup <b>L</b>enguage, que viene
@@ -54,7 +54,7 @@
         <div class="barra-lateral">
             <a><img
                     width="50%"
-                    src="programador.jpg"></a>
+                    src="imagenes/programador.jpg"></a>
             <div>
                 <h3>5dr3v</h3>
                 <p class="bio" itemprop="descripcion">
