--- a/2. Criptomonedas.html
+++ b/2. Criptomonedas.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cuerpo">
         <div class="articulo">
-            <p><h1><a><img align="center" width="20%" src="https://acortar.link/IDgAVA"> 2. Criptomonedas, ¿Futuro o pasado?</h1></a></p> 
+            <p><h1><a><img align="center" width="20%" src="imagenes\bitcoin.png"> 2. Criptomonedas, ¿Futuro o pasado?</h1></a></p> 
             <ol>
                 <h2><a>¿Qué son las criptomonedas?</a></h2>
                 <p>Una criptomoneda es un activo digital que emplea un cifrado criptográfico para garantizar su titularidad y 
@@ -47,7 +47,7 @@
         <div class="barra-lateral">
             <a><img
                     width="50%"
-                    src="programador.jpg"></a>
+                    src="imagenes/programador.jpg"></a>
             <div>
                 <h3>5dr3v</h3>
                 <p class="bio" itemprop="descripcion">
