--- a/3. MicroChip.html
+++ b/3. MicroChip.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cuerpo">
         <div class="articulo">
-             <p><h1><a><img align="center" width="20%" src="https://acortar.link/kBodRd"> 3. Microchip, 50 años</h1></a></p>
+             <p><h1><a><img align="center" width="20%" src="imagenes\Microchip.png"> 3. Microchip, 50 años</h1></a></p>
                 <ol>
                 <h2><a>Antecesor</a></h2>
                 <p>El microchip, ese objeto diminuto que se encuentra en casi todas las facetas de nuestra vida diaria, cumple 50 años.</p>
@@ -52,7 +52,7 @@
         <div class="barra-lateral">
             <a><img
                     width="50%"
-                    src="programador.jpg"></a>
+                    src="imagenes/programador.jpg"></a>
             <div>
                 <h3>5dr3v</h3>
                 <p class="bio" itemprop="descripcion">
