--- a/4. Juegos NFT.html
+++ b/4. Juegos NFT.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cuerpo">
         <div class="articulo">
-             <p><h1><a><img align="center" width="20%" src="https://acortar.link/0IlEiF"> 4. Juegos NFT</h1></a></p>
+             <p><h1><a><img align="center" width="20%" src="imagenes\nft.jpg"> 4. Juegos NFT</h1></a></p>
                 <ol>
                 <h2><a>¿Que son los NFT?</a></h2>
                 <p>Los NFT son <b>N</b>on <b>F</b>ungible <b>T</b>okens o tokens no fungibles o no intercambiables por otro, diferenciados de los demás. Es un nuevo formato 
@@ -24,7 +24,7 @@
                 <P>Además de combatir zombis, el juego ofrece la posibilidad de ser un jardinero que cuida plantas en una granja. Las plantas son plantas NFC, lo que 
                 quiere decir que tiene un valor único que puede ser mayor o menor en función de la oferta y de la demanda; y pueden venderse a otros jugadores o, 
                 simplemente, jugar con ellas. Es una función accesible bajo un pago de unos 65 €.</p>
-                <a href="https://plantvsundead.com/" target="_blank"><img src="https://acortar.link/eLUY8o"></a>
+                <a href="https://plantvsundead.com/" target="_blank"><img align="center" src="imagenes\planta.jpg"></a>
                 <p>Esa cantidad permiten hacerse con cinco unidades de la criptomoneda del juego llamada PVU. Esta criptomoneda puede intercambiarse por 
                 dinero real en exchanges (mercados) fuera del juego, y su compra es requisito obligado para comenzar a plantar y regar plantas. 
                 Su cotización actual ronda los 3 dólares, pero a finales del mes de agosto cada PVU andaba por los 25.</p>
@@ -34,7 +34,7 @@
                  En el juego existe también la figura del terrateniente, dueño de la granja y que también obtiene LE´s, al igual que el jardinero que hace el trabajo de pico y pala (es un decir).</p>
                 <p>El terrateniente tiene una barrera de entrada más alta en el juego y deberá desembolsar varios miles de euros para adquirirla. Aquí se da otro fenómeno que es el del alquiler de granjas a jardineros. 
                 De forma que es el jardinero quien se mancha las manos (otro decir) mientras el dueño de la granja reparte los beneficios obtenidos con él.</p>
-                <img src="https://acortar.link/73txAp">
+                <img float="center" src="imagenes\planta2.jpg">
                 <p>En términos generales, así es como funcionan los juegos NFT. Emplean sistemas de economía que hacen uso de criptomonedas intercambiables por 
                 dinero real fuera del juego y también NFC´s que pueden llegar a adquirir un gran valor. Pero ese valor depende de la cotización y ésta de la oferta y demanda. Como le ha sucedido a Plant Vs Undead y a otros juegos NFT, 
                 al correrse la la voz de poder hacer dinero con poco esfuerzo, el juego ha experimentado una explosión de jugadores que a continuación han corrido a vender sus PVU´s, cuyo valor se ha venido abajo.</p>
@@ -58,7 +58,7 @@
         <div class="barra-lateral">
             <a><img
                     width="50%"
-                    src="programador.jpg"></a>
+                    src="imagenes/programador.jpg"></a>
             <div>
                 <h3>5dr3v</h3>
                 <p class="bio" itemprop="descripcion">
