--- a/5. Escasez de chips.html
+++ b/5. Escasez de chips.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cuerpo">
         <div class="articulo">
-            <p><h1><a><img align="center" width="20%" src="https://acortar.link/q3KLFo"> 5. Escasez de chips</h1></a></p>
+            <p><h1><a><img align="center" width="20%" src="imagenes\chip.jpg"> 5. Escasez de chips</h1></a></p>
                 <ol>
                 <h2><a>¿Porque este problema de escasez?</a></h2>
                 <p>La escasez actual tiene difícil solución a corto plazo, puesto que la inversión en la industria del chip no da sus frutos de un 
@@ -52,7 +52,7 @@
         <div class="barra-lateral">
             <a><img
                     width="50%"
-                    src="programador.jpg"></a>
+                    src="imagenes/programador.jpg"></a>
             <div>
                 <h3>5dr3v</h3>
                 <p class="bio" itemprop="descripcion">
