--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
             </ol>
             <section class="paginacion">
                 <ul>
+                    <li style="padding:5px 10px; background:none; color:rgb(70, 85, 85)">anterior</li>
                     <li><a href="index.html" class="active">1</a></li>
                     <li><a href="pagina2.html">2</a></li>
+                    <li>
+                    <a style="background:none;" href="pagina2.html">siguiente</a>
+                    </li>
                 </ul>
             </section>
         </div>
         <div class="barra-lateral">
             <a><img
                     width="50%"
-                    src="programador.jpg"></a>
+                    src="imagenes/programador.jpg"></a>
             <div>
                 <h3>5dr3v</h3>
                 <p class="bio" itemprop="descripcion">
