--- a/pagina2.html
+++ b/pagina2.html
@@ -29,16 +29,19 @@
             </ol>
             <section class="paginacion">
                 <ul>
+                    <li>
+                    <a style="background:none;" href="index.html">anterior</a>
+                    </li>
                     <li><a href="index.html">1</a></li>
                     <li><a href="pagina2.html" class="active">2</a></li>
-
+                    <li style="padding:5px 10px; background:none; color:rgb(70, 85, 85)">siguiente</li>
                 </ul>
             </section>
         </div>
         <div class="barra-lateral">
             <a><img
                     width="50%"
-                    src="programador.jpg"></a>
+                    src="imagenes/programador.jpg"></a>
             <div>
                 <h3>5dr3v</h3>
                 <p class="bio" itemprop="descripcion">
