--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Proyecto WEB para ASIGNATURA: Desarrollo de Aplicaciones en Red -->
+<!-- Proyecto WEB para ASIGNATURA de UNIR: Desarrollo de Aplicaciones en Red -->
 <html>
 <head lang="es">
     <meta charset="UTF-8">
